--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "draft-js": "^0.11.5",
+    "lodash": "^4.17.15",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-select": "^3.1.0",
     "react-sticky-mouse-tooltip": "0.0.1"
   },
   "scripts": {
