--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "chroma-js": "^2.1.0",
     "draft-js": "^0.11.5",
     "lodash": "^4.17.15",
     "react": "^16.13.0",
